# Stats-Calculator

./: .gitignore  Introduction.py  LICENSE  README.md  app.py  documentation.md  pyproject.toml  requirements.txt  utils.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
distributions/: binomial.py  normal.py
distributions/continuous/: exponential.py  normal.py  triangular.py  uniform.py
distributions/discrete/: binomial.py  poisson.py  probability.py
hypothesis_test/: anova.py  chi_square.py  hypothesis_test.py
ml/others/: kmeans.py
ml/regression/linear_reg/: gradient_descent.py  linear_reg.py
ml/supervised/classification/: decision_tree.py  logistic_reg.py
ml/supervised/regression/: gradient_descent.py  linear_reg.py
ml/unsupervised/: kmeans.py  pca.py
moe/: moe.py  moe_inverse.py
pages/: 1_Theory.py  2_Distribution.py  3_Confidence_Interval.py  4_Hypothesis_Test.py  5_Machine_Learning.py  6_Data_Exploration.py  7_Tree_based_Machine_Learning.py
probability/: monty_hall.py  probability.py
theorem/: clt.py  llon.py
theory/: chart.py  empirical_rule.py  vocab.py
tree_based_ml/: adaboost.py  catboost_model.py  gradient_boosting.py  lightgbm_model.py  random_forest.py  xgboost_model.py
