[project]
name = "stats-calculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "backports-tarfile==1.2.0",
    "catboost>=1.2.7",
    "importlib-metadata==8.0.0",
    "importlib-resources==6.4.0",
    "ipykernel==6.29.5",
    "jaraco-text==3.12.1",
    "lightgbm>=4.5.0",
    "matplotlib>=3.10.8",
    "numpy<2.0",
    "openpyxl==3.1.5",
    "pandas>=2.3.3",
    "pip-chill==1.0.3",
    "plotly==5.24.1",
    "scikit-learn==1.5.1",
    "scipy<1.13",
    "seaborn==0.13.2",
    "statsmodels==0.14.2",
    "streamlit==1.38.0",
    "streamlit-lottie>=0.0.5",
    "tomli==2.0.1",
    "xgboost>=2.1.0",
]
 